--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,4 +1,4 @@
-changeLogFile=src/main/resources/db/changelog/master.xml
+changeLogFile=src/main/resources/db/changelog/db.changelog-master.xml
 logging=debug
 driver=org.postgresql.Driver
 url=jdbc:postgresql://localhost:5432/rest_app_db
