--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       POSTGRES_DB: cci_db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+      LIQUIBASE_PROPERTIES_FILE: /app/liquibase.properties
     ports:
       - "5432:5432"
     volumes:
