--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,10 +1,10 @@
-spring.liquibase.enabled=true
+#spring.liquibase.enabled=true
 
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/rest_app_db_test
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/rest_app_db_test
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=create
